[gd_scene load_steps=4 format=3 uid="uid://cnrsy6ggce355"]

[ext_resource type="Script" path="res://tech_tree_node.gd" id="1_81tm0"]
[ext_resource type="Script" path="res://click_catcher.gd" id="2_aub7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoxbh"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.197937, 0.197937, 0.197937, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="nodeMargin" type="MarginContainer"]
texture_filter = 4
focus_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 10
script = ExtResource("1_81tm0")

[node name="nodePanel" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eoxbh")

[node name="node" type="VBoxContainer" parent="nodePanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="top" type="HBoxContainer" parent="nodePanel/node"]
layout_mode = 2

[node name="SKILL_NAME" type="Label" parent="nodePanel/node/top"]
layout_mode = 2
text = "SKILL_NAME
"

[node name="PRICE" type="RichTextLabel" parent="nodePanel/node/top"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
bbcode_enabled = true
text = "[img]res://coins.png[/img]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SKILL_REQUIRES" type="Label" parent="nodePanel/node"]
layout_mode = 2
text = "SKILL_REQUIRES"

[node name="bottom" type="HBoxContainer" parent="nodePanel/node"]
layout_mode = 2

[node name="sd_margin" type="MarginContainer" parent="nodePanel/node/bottom"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="SKILL_DESCRIPTION" type="Label" parent="nodePanel/node/bottom/sd_margin"]
layout_mode = 2
text = "SKILL_DESCRIPTION
"

[node name="click2buy" type="Button" parent="nodePanel/node/bottom"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
disabled = true
text = "Click to buy"

[node name="click_catcher" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("2_aub7u")

[node name="lines" type="Node2D" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="click_catcher" to="click_catcher" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="click_catcher" to="click_catcher" method="_on_mouse_exited"]
[connection signal="pressed" from="click_catcher" to="click_catcher" method="_on_pressed"]
